bugfix ul li elements visible

--- a/qa-theme/cleanstrap/qa-styles.css
+++ b/qa-theme/cleanstrap/qa-styles.css
@@ -23,5 +23,5 @@ ul.qa-feed-list li {
 }
 
 ul.qa-feed-list li a, a:link, a:active, a:visited {
-  color: white;
+  color: #55F;
 }
